Fix spaces for readability

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
     background-image: url(images/wickedbackground.svg);
     background-size: cover;
 }
+
 .container {
     display: grid;
     width: 500px;
@@ -16,9 +17,11 @@ body {
     border: 5px solid #343390;
     outline: 10px solid #8685d3;
 }
+
 .container div {
     border: 1px solid rgb(135, 135, 135);
 }
+
 .headline {
     grid-column: 1/3;
     display: flex;
@@ -27,11 +30,13 @@ body {
     font-family: 'Kalam', cursive;
     font-size: 72px;
 }
+
 .container-block {
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
 .panel-block {
     display: flex;
     flex-direction: column;
@@ -39,6 +44,7 @@ body {
     align-items: flex-end;
     /* margin-top: 20px; */
 }
+
 .panel {
     display: flex;
     flex-direction: column;
@@ -49,16 +55,19 @@ body {
     outline: 10px solid #8685d3;
     gap: 15px;
 }
+
 .slider-container p {
     margin: 0;
     padding: 15px;
     font-size: 18px;
 }
+
 .buttons {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 10px;
 }
+
 .color-button,
 .clear {
     background-color: #343390;
@@ -71,11 +80,13 @@ body {
     font-size: 20px;
     box-shadow: 3px 3px 3px #000;
 }
+
 .color-button:hover,
 .clear:hover {
     background-color: #CA4100;
     transition: 0.7s;
 }
+
 .color-button:focus {
     outline-color: transparent;
     outline-style: groove;
@@ -83,6 +94,7 @@ body {
     transition: 0.7s;
     background-color: #CA4100;
 }
+
 .color-button:active,
 .clear:active {
     background-color: #ffbf00;
@@ -90,9 +102,7 @@ body {
     outline-style: groove;
     box-shadow: 3px 3px 3px #ffbf00;
 }
-.color-pick {
-        
-}
+
 .footer {
     grid-column: 1/3;
     display: flex;
@@ -103,6 +113,7 @@ body {
     gap: 10px;
     margin-top: 60px;
 }
+
 .links {
     margin-top: 13px;
     display: flex;
@@ -110,14 +121,17 @@ body {
     align-items: center;
     gap: 20px;
 }
+
 .footer a {
     text-decoration: none;
     color: #fff;
     font-size: 12px;
 }
+
 .footer a span {
     text-decoration: underline;
 }
+
 .footer a:hover {
     text-decoration: underline;
 }
@@ -126,7 +140,7 @@ input[type="range"] {
     -webkit-appearance: none;
     -moz-appearance: none;
     margin-right: 15px;
-    width: 200px;
+    width: 300px;
     height: 7px;
     background: rgba(255, 255, 255, 0.6);
     border-radius: 5px;
@@ -171,10 +185,12 @@ input[type=range]::-moz-range-track  {
     cursor: pointer;
     background-color: transparent;
 }
+
 #user-color::-webkit-color-swatch {
     border-radius: 50px;
     border: none;
 }
+
 #user-color::-moz-color-swatch {
     border-radius: 50px;
     border: none;
